[package]
name = "alpha_bleeding"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sssooonnnggg/alpha_bleeding"
description = "A tool used to fix white border issues by doing alpha bleeding."

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
image = "0.24.7"

[lib]
path = "src/lib.rs"

[[bin]]
name = "alpha_bleeding"
path = "src/main.rs"
